Actualizar enlace de CALCUMIN

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       {
         name: "CALCUMIN",
         icon: "icono1.png",
-        url: "https://ejemplo.com/calcumin"
+        url: "https://flavio1227.github.io/CALCUMIN/"
       },
       {
         name: "Mapas",
